# MemoryBank

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.openclaw/extensions/memory-bank/: index.js  openclaw.plugin.json  package.json
.openclaw/tests/: memory-bank.test.js
.opencode/plugins/: memory-bank.js
.opencode/tests/: memory-bank.test.js
config/: setup-model-catalog.json
docs/: architecture.md  claude-code.md  codex.md  gemini-cli.md  how-it-works.md  openclaw.md  opencode.md  requirements-and-cost.md  requirements.md  troubleshooting.md
memory-bank-app/: Cargo.toml
memory-bank-app/src/: lib.rs
memory-bank-cli/: Cargo.toml
memory-bank-cli/src/: agents.rs  assets.rs  cli.rs  cli_help.rs  command_utils.rs  config.rs  constants.rs  domain.rs  error.rs  json_config.rs  lib.rs  main.rs  models.rs  operations.rs  output.rs  real_binary_tests.rs  service.rs  setup.rs  toml_config.rs
memory-bank-cli/src/agents/: claude.rs  codex.rs  gemini.rs  openclaw.rs  opencode.rs  shared.rs
memory-bank-cli/src/operations/: render.rs
memory-bank-cli/src/service/: definitions.rs  launch.rs
memory-bank-cli/src/setup/: plan.rs  prompts.rs  render.rs
memory-bank-cli/tests/: mb_blackbox.rs
memory-bank-hook/: Cargo.toml
memory-bank-hook/src/: cli.rs  client.rs  error.rs  logging.rs  main.rs
memory-bank-hook/src/normalize/: claude_code.rs  codex.rs  gemini_cli.rs  mod.rs  openclaw.rs  opencode.rs
memory-bank-mcp-proxy/: Cargo.toml
memory-bank-mcp-proxy/src/: cli.rs  error.rs  lib.rs  main.rs  proxy.rs
memory-bank-protocol/: Cargo.toml
memory-bank-protocol/src/: lib.rs  retrieve_memory.rs
memory-bank-server/: Cargo.toml
memory-bank-server/src/: actor.rs  config.rs  db.rs  encoder.rs  error.rs  http_server.rs  ingest.rs  lib.rs  llm.rs  llm_eval.rs  logging.rs  main.rs  mcp_server.rs  memory_window.rs  ollama_eval.rs  retrieval_eval.rs  startup_state.rs
