[workspace]
members = [
    "memory-bank-app",
    "memory-bank-cli",
    "memory-bank-hook",
    "memory-bank-mcp-proxy",
    "memory-bank-protocol",
    "memory-bank-server",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.102"
axum = { version = "0.8", features = ["http1", "tokio"] }
blake3 = "1.8.2"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
dirs = "6"
dialoguer = "0.11.0"
fastembed = "5.11.0"
hf-hub = "0.4"
libsqlite3-sys = "0.30.1"
rig-core = "0.31.0"
rmcp = { version = "0.16.0", features = [
    "client",
    "schemars",
    "server",
    "transport-io",
    "transport-streamable-http-client-reqwest",
    "transport-streamable-http-server",
] }
schemars = { version = "1.2.1", features = ["chrono04"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlite-vec = "0.1.6"
sqlx = { version = "0.8.6", features = ["migrate", "sqlite", "runtime-tokio-rustls"] }
thiserror = "2.0.18"
tempfile = "3.17.1"
tokio = { version = "1.49.0", features = ["full"] }
tokio-retry = "0.3.0"
tokio-util = "0.7"
tower = { version = "0.5", features = ["util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
url = "2.5.8"
ureq = { version = "2.12.1", default-features = false, features = ["json", "tls"] }
