[package]
name = "memory-bank-cli"
edition.workspace = true
version.workspace = true
license.workspace = true

[[bin]]
name = "mb"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
clap.workspace = true
dialoguer.workspace = true
memory-bank-app = { path = "../memory-bank-app" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq.workspace = true

[dev-dependencies]
tempfile.workspace = true
