[package]
name = "memory-bank-hook"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
clap.workspace = true
memory-bank-protocol = { path = "../memory-bank-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
ureq.workspace = true
