[package]
name = "memory-bank-mcp-proxy"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
clap.workspace = true
memory-bank-protocol = { path = "../memory-bank-protocol" }
rmcp.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[dev-dependencies]
axum.workspace = true
chrono.workspace = true
tokio-util.workspace = true
tower.workspace = true
