[package]
name = "memory-bank-server"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
fastembed.workspace = true
hf-hub.workspace = true
libsqlite3-sys.workspace = true
memory-bank-app = { path = "../memory-bank-app" }
memory-bank-protocol = { path = "../memory-bank-protocol" }
rig-core.workspace = true
rmcp.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlite-vec.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-retry.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true
url.workspace = true

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true
